--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
   </style>
   <script>
     async function fetchData() {
-      const response = await fetch('URL-ul tău de la Apps Script');
+      const response = await fetch('https://script.google.com/macros/s/AKfycbyJKaPi1Fvn8kW2fgS3jO2gIwkysPl0WeddawtPiEz0Mkd8dd3f1t-34gryABIZ5snW/exec');
       const data = await response.json();
       updateSite(data);
     }
