--- a/index.html
+++ b/index.html
@@ -54,13 +54,21 @@
   </style>
   <script>
     async function fetchData() {
-      const response = await fetch('https://script.google.com/macros/s/AKfycbyJKaPi1Fvn8kW2fgS3jO2gIwkysPl0WeddawtPiEz0Mkd8dd3f1t-34gryABIZ5snW/exec');
-      const data = await response.json();
-      updateSite(data);
+      try {
+        const response = await fetch('URL-ul tău de la Apps Script');
+        if (!response.ok) {
+          throw new Error('Network response was not ok');
+        }
+        const data = await response.json();
+        updateSite(data);
+      } catch (error) {
+        console.error('There was a problem with the fetch operation:', error);
+      }
     }
 
     function updateSite(data) {
       const table = document.getElementById('data-table-body');
+      table.innerHTML = '';  // Golește tabelul înainte de a adăuga date noi
       data.forEach(row => {
         const tr = document.createElement('tr');
         Object.keys(row).forEach(key => {
@@ -81,10 +89,11 @@
   <table>
     <thead>
       <tr>
-        <!-- Adaugă aici antetele tale -->
         <th data-label="Coloana 1">Coloana 1</th>
         <th data-label="Coloana 2">Coloana 2</th>
         <th data-label="Coloana 3">Coloana 3</th>
+        <th data-label="Coloana 4">Coloana 4</th>
+        <th data-label="Coloana 5">Coloana 5</th>
       </tr>
     </thead>
     <tbody id="data-table-body">
