--- a/index.html
+++ b/index.html
@@ -89,11 +89,11 @@
   <table>
     <thead>
       <tr>
-        <th data-label="Coloana 1">Coloana 1</th>
-        <th data-label="Coloana 2">Coloana 2</th>
-        <th data-label="Coloana 3">Coloana 3</th>
-        <th data-label="Coloana 4">Coloana 4</th>
-        <th data-label="Coloana 5">Coloana 5</th>
+        <th data-label="Serviciu">Serviciu</th>
+        <th data-label="Tip">Tip</th>
+        <th data-label="Companie">Companie</th>
+        <th data-label="Cost (lei)">Cost (lei)</th>
+        <th data-label="Bifat">Bifat</th>
       </tr>
     </thead>
     <tbody id="data-table-body">
