--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
   <script>
     async function fetchData() {
       try {
-        const response = await fetch('URL-ul tău de la Apps Script');
+        const response = await fetch('https://script.google.com/macros/s/AKfycbzjIT4wf0YtyR2l1SodP1J6Z2Uar5XaeE47xFmnqpIDtan5wIZ7jhN834vKnacpYSkf/exec');
         if (!response.ok) {
           throw new Error('Network response was not ok');
         }
