--- a/index.html
+++ b/index.html
@@ -31,11 +31,17 @@
       padding: 10px;
       font-size: 16px;
     }
+    h2 {
+      margin: 20px 0 10px;
+    }
+    .sheet-container {
+      margin-bottom: 40px;
+    }
   </style>
   <script>
     async function fetchData() {
       try {
-        const response = await fetch('https://script.google.com/macros/s/AKfycbyq_f2utltb_ZjNBioS9ObHhjFqPLVSoyixiqKMahinqCkiav6fS1FC_5rISLScQ2yY/exec');
+        const response = await fetch('https://script.google.com/macros/s/AKfycbxMcuZEFptWNgsx_23EOISM4ntyNgX9cGzB7sLCEYxCgpNm9BvHAd3CwNaDI6KVK5c/exec');
         if (!response.ok) {
           throw new Error('Network response was not ok');
         }
@@ -48,6 +54,7 @@
 
     function populateSheetSelection(data) {
       const sheetSelect = document.getElementById('sheet-select');
+      sheetSelect.innerHTML = ''; // Golește selecția înainte de a adăuga opțiuni noi
       for (const sheetName in data) {
         const option = document.createElement('option');
         option.value = sheetName;
@@ -65,12 +72,13 @@
     }
 
     function updateTable(sheetData) {
-      const table = document.getElementById('data-table-body');
-      table.innerHTML = ''; // Golește tabelul înainte de a adăuga date noi
+      const container = document.getElementById('data-container');
+      container.innerHTML = ''; // Golește containerul înainte de a adăuga date noi
 
-      if (sheetData.length === 0) return;
+      const headers = sheetData.headers;
+      const rows = sheetData.rows;
 
-      const headers = Object.keys(sheetData[0]);
+      const table = document.createElement('table');
       const thead = document.createElement('thead');
       const headerRow = document.createElement('tr');
       headers.forEach(header => {
@@ -82,7 +90,7 @@
       table.appendChild(thead);
 
       const tbody = document.createElement('tbody');
-      sheetData.forEach(row => {
+      rows.forEach(row => {
         const tr = document.createElement('tr');
         headers.forEach(header => {
           const td = document.createElement('td');
@@ -92,6 +100,8 @@
         tbody.appendChild(tr);
       });
       table.appendChild(tbody);
+
+      container.appendChild(table);
     }
 
     window.onload = fetchData;
@@ -99,16 +109,6 @@
 </head>
 <body>
   <h1>Website actualizat din Google Sheets</h1>
-  <select id="sheet-select"></select>
-  <table>
-    <thead>
-      <tr>
-        <!-- Header dinamic -->
-      </tr>
-    </thead>
-    <tbody id="data-table-body">
-      <!-- Datele vor fi adăugate aici dinamic -->
-    </tbody>
-  </table>
-</body>
-</html>
+  <div class="sheet-container">
+    <select id="sheet-select"></select>
+    <div id="data-container
