--- a/index.html
+++ b/index.html
@@ -1,22 +1,43 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Website actualizat din Google Sheets</title>
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
   <style>
     body {
-      font-family: Arial, sans-serif;
+      font-family: 'Arial', sans-serif;
       margin: 0;
       padding: 20px;
       background-color: #f0f0f0;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+    }
+    h1 {
+      margin-bottom: 20px;
+    }
+    .container {
+      max-width: 1200px;
+      width: 100%;
+      background: #fff;
+      box-shadow: 0 4px 8px rgba(0,0,0,0.1);
+      border-radius: 8px;
+      overflow: hidden;
+      padding: 20px;
+    }
+    select {
+      width: 100%;
+      padding: 10px;
+      margin-bottom: 20px;
+      font-size: 16px;
+      border: 1px solid #ddd;
+      border-radius: 4px;
     }
     table {
       width: 100%;
-      max-width: 1000px;
       border-collapse: collapse;
-      margin: 20px 0;
-      background-color: #fff;
-      box-shadow: 0 2px 4px rgba(0,0,0,0.1);
+      margin-bottom: 20px;
     }
     th, td {
       padding: 12px;
@@ -26,22 +47,14 @@
     th {
       background-color: #f4f4f4;
     }
-    select {
-      margin: 20px 0;
-      padding: 10px;
-      font-size: 16px;
-    }
-    h2 {
-      margin: 20px 0 10px;
-    }
-    .sheet-container {
-      margin-bottom: 40px;
+    tr:nth-child(even) {
+      background-color: #f9f9f9;
     }
   </style>
   <script>
     async function fetchData() {
       try {
-        const response = await fetch('https://script.google.com/macros/s/AKfycbxMcuZEFptWNgsx_23EOISM4ntyNgX9cGzB7sLCEYxCgpNm9BvHAd3CwNaDI6KVK5c/exec');
+        const response = await fetch('https://script.google.com/macros/s/AKfycbwHOaFtzJENj_dJrXPogbNC_XWkJpDqH_JOYsmA-fvQNYUMyVB5WR61f6Pfe0oT3oGn/exec');
         if (!response.ok) {
           throw new Error('Network response was not ok');
         }
@@ -108,7 +121,10 @@
   </script>
 </head>
 <body>
-  <h1>Website actualizat din Google Sheets</h1>
-  <div class="sheet-container">
+  <h1>aRGES Organisation My App Plus v1.0 Beta</h1>
+  <div class="container">
     <select id="sheet-select"></select>
-    <div id="data-container
+    <div id="data-container"></div>
+  </div>
+</body>
+</html>
